test/Fail/Issue7029.err
Issue7029.agda:13.13-16: warning: -W[no]RewriteHeadSymbolContainsMetas
UIP is not a legal rewrite rule, since the definition of the head symbol myrefl contains unsolved metavariables and confluence checking is enabled.
when checking the pragma REWRITE UIP
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  ?0 = refl : x ≡ x (blocked on _6)

Issue7029.agda:8.10-11: error: [UnsolvedInteractionMetas]
Unsolved interaction metas at the following locations:
  Issue7029.agda:8.10-11

Issue7029.agda:11.17-30: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue7029.agda:11.17-23
  Issue7029.agda:11.26-30
